finishe section about help

--- a/index.html
+++ b/index.html
@@ -83,17 +83,55 @@
                 <button><a href="#">
                         <img src="./img/ arrowr.svg" alt="">
                     </a></button>
-
             </div>
-
-
-
-
         </div>
         <div class=" container buttom">
             <a href="#">Get to know the rest</a>
         </div>
     </aside>
+
+
+    <section class=" container help">
+        <h2>How you can help our shelter</h2>
+        <div class="help-wrapper">
+            <div class="help-wrapper__link">
+                <img src="./img/food.svg" alt="food">
+                <p>Pet food</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/car.svg" alt="car">
+                <p>Transportation</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/toys.svg" alt="toys">
+                <p>Toys</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/cups.svg" alt="cups">
+                <p>Bowls and cups</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/shampoos.svg" alt="shampoos">
+                <p>Shampoos</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/vitamins.svg" alt="vitamins">
+                <p>Vitamins</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/medicines.svg" alt="medicines">
+                <p>Medicines</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/leashes.svg" alt="leashes">
+                <p>Collars / leashes</p>
+            </div>
+            <div class="help-wrapper__link">
+                <img src="./img/sleeping.svg" alt="sleeping">
+                <p>Sleeping areas</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
