continue last section in main

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </section>
     <aside>
-        <h2>Our friends who<br> are looking for a house</h2>
+        <h2 class="name">Our friends who<br> are looking for a house</h2>
         <div class="container slides-wrapper">
 
             <div class="slides-wrapper__left">
@@ -132,6 +132,25 @@
             </div>
         </div>
     </section>
+    <aside>
+        <div class="container donation-wrapper">
+            <div class="donation-wrapper__labrador">
+                <img src="./img/labrador.png" alt="labrador">
+            </div>
+            <div class="donation-wrapper__card">
+                <h2>You can also make a donation</h2>
+                <p>Name of the bank / Type of bank account</p>
+                <div class="number">
+                    <p>8380 2880 8028 8791 7435</p>
+                </div>
+                <p class="information">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in
+                    faucibus.
+                </p>
+            </div>
+
+        </div>
+    </aside>
+
 </body>
 
 </html>
