start section and footer

--- a/index.html
+++ b/index.html
@@ -150,6 +150,24 @@
 
         </div>
     </aside>
+    <footer>
+        <div class="container footer-wrapper">
+            <div>
+                <h2>For questions and suggestions</h2>
+
+                <p class="email">
+                    <a href="mailto:email@shelter.com"></a> email@shelter.com</p>
+                <p class="tel">
+                    <a href="tel:+13 674 567 75 54"></a> +13 674 567 75 54</p>
+            </div>
+            <div>
+                <h2>We are waiting for your visit</h2>
+                <p>1 Central Street, Boston (entrance from the store)</p>
+                <p>18 South Park, London </p>
+            </div>
+            <div><img src="./img/footer-puppy.png" alt="footer-puppy"></div>
+        </div>
+    </footer>
 
 </body>
 
