finished maket Pet shelter

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                 </div>
                 <p class="information">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in
                     faucibus.
-                </p>
             </div>
+        </div>
 
         </div>
     </aside>
@@ -162,8 +162,8 @@
             </div>
             <div>
                 <h2>We are waiting for your visit</h2>
-                <p>1 Central Street, Boston (entrance from the store)</p>
-                <p>18 South Park, London </p>
+                <p class="local">1 Central Street, Boston (entrance from the store)</p>
+                <p class="local">18 South Park, London </p>
             </div>
             <div><img src="./img/footer-puppy.png" alt="footer-puppy"></div>
         </div>
