--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 </div>
             </div>
         </header>
-
         <div class="container main-wrapper">
             <div class="main-wrapper__text">
                 <h1>Not only people need a house</h1>
@@ -54,7 +53,7 @@
         </div>
     </section>
     <aside>
-        <h2 class="name">Our friends who<br> are looking for a house</h2>
+        <h2 class="container name">Our friends who<br> are looking for a house</h2>
         <div class="container slides-wrapper">
 
             <div class="slides-wrapper__left">
@@ -154,7 +153,6 @@
         <div class="container footer-wrapper">
             <div>
                 <h2>For questions and suggestions</h2>
-
                 <p class="email">
                     <a href="mailto:email@shelter.com"></a> email@shelter.com</p>
                 <p class="tel">
