--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="slides-wrapper__middle">
                 <div class="middle-pets">
-                    <div class="cat">
+                    <div>
                         <img src="./img/cat.png" alt="cat">
                         <p>Katrine</p>
                         <a href="#">Learn more</a>
@@ -71,7 +71,7 @@
                         <p>Jennifer</p>
                         <a href="#">Learn more</a>
                     </div>
-                    <div class="dog">
+                    <div>
                         <img src="./img/dog.png" alt="dog">
                         <p>Woody</p>
                         <a href="#">Learn more</a>
@@ -138,7 +138,7 @@
             </div>
             <div class="donation-wrapper__card">
                 <h2>You can also make a donation</h2>
-                <p>Name of the bank / Type of bank account</p>
+                <h4>Name of the bank / Type of bank account</h4>
                 <div class="number">
                     <p>8380 2880 8028 8791 7435</p>
                 </div>
