--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <main>
         <header>
             <div class="container header-wrapper">
                 <div class="header-wrapper__logo">
@@ -27,6 +26,7 @@
                 </div>
             </div>
         </header>
+        <main>
         <div class="container main-wrapper">
             <div class="main-wrapper__text">
                 <h1>Not only people need a house</h1>
@@ -57,7 +57,7 @@
         <div class="container slides-wrapper">
 
             <div class="slides-wrapper__left">
-                <button><a href="#"><img src="./img/Arrow.svg" alt=""></a></button>
+                <button><img src="./img/arrow.svg" alt=""></button>
             </div>
             <div class="slides-wrapper__middle">
                 <div class="middle-pets">
@@ -79,12 +79,10 @@
                 </div>
             </div>
             <div class="slides-wrapper__right">
-                <button><a href="#">
-                        <img src="./img/ arrowr.svg" alt="">
-                    </a></button>
+                <button><img src="./img/ arrowr.svg" alt=""></button>
             </div>
         </div>
-        <div class=" container buttom">
+        <div class="container button">
             <a href="#">Get to know the rest</a>
         </div>
     </aside>
