adaptive of the second page is finished

--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </div>
+            <div class="burger"><img src="./img/burger.svg" alt=""></div>
         </div>
         </div>
     </header>
